before going no posters and 1 per row

--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,12 @@
 /* Movie List Container */
 .movie-list-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 0.7fr));
     gap: 25px;
+}
+
+.movie-list-heading {
+    grid-column: 1 / -1;
 }
 
 .no-results-message, .loading-message {
