--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f7f6; /* Light gray background */
+    background-color: #454b49; /* Light gray background */
     color: #333;
 }
