--- a/src/styles/RatingsDropdown.css
+++ b/src/styles/RatingsDropdown.css
@@ -35,7 +35,7 @@
 
 .dropdown-menu {
     position: absolute;
-    top: 100%; /* Position below the button */
+    top: 100%; 
     left: 0;
     background-color: #fff;
     border: 1px solid #ddd;
