--- a/src/styles/ListItem.css
+++ b/src/styles/ListItem.css
@@ -14,6 +14,10 @@
     box-shadow: 0 6px 12px rgba(0,0,0,0.15);
 }
 
+.list-item-card:active{
+    transform: scale(0.95);
+}
+
 .list-item-poster {
     width: 100%;
     height: auto; 
